--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Library Labeler</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <label for="file-upload" accept=".tsv">Upload a file...</label>
     <input id="file-upload" name="file-upload" type="file">
+
+    <div id="file-processors">
+      <button id="generate-labels">Generate labels</button>
+      <button id="generate-companion">Generate companion</button>
+    </div>
+
     <script src="bundle.js"></script>
   </body>
 </html>
