Add basic partial sheet support

--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,9 @@
       <button id="generate-companion">Generate companion</button>
     </div>
 
+    <button id="add-partial-sheet">+</button>
+    <div id="partial-sheets"></div>
+
     <script src="bundle.js"></script>
   </body>
 </html>
