Clarify partial sheet wording

--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section id="partial-sheet-ui">
-      <h2>Existing Sheets</h2>
+      <h2>Partially Used Sheets</h2>
       <button id="add-partial-sheet">+</button>
       <div id="partial-sheets"></div>
     </section>
